# Univag-RH

UnivagRH/: Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt  reset_database.py
UnivagRH/tests/: app.py  reset_database.py
UnivagRH/tests/blueprints/: __init__.py  auth_bp.py  funcionario_bp.py  rh_bp.py
UnivagRH/tests/ext/: configuration.py  database.py  login_manager.py
UnivagRH/tests/models/: __init__.py  base.py  documento.py  fluxo_aprovacao.py  funcionarios.py  solicitacao.py  tipo_solicitacao.py  usuario.py  usuarios_detalhes.py
UnivagRH/tests/services/: auth_service.py  ia_service.py  solicitacao_service.py
UnivagRH/tests/static/css/: style.css
UnivagRH/tests/static/css/funcionario/: main_page.css  solicitar.css  style.css
UnivagRH/tests/static/csv/: FuncionarioBase.csv
UnivagRH/tests/templates/: base.html  base_template.html  chat_ia.html  funcionario.html  login.html  main.html  rh.html  solicitacoes.html
UnivagRH/tests/templates/funcionario/: chat_ia.html  funcionario_template.html  main_page.html  solicitar.html
UnivagRH/tests/utils/: cache_helpers.py
