[tool.poetry]
name = "univagrh"
version = "1.0.0"
description = "projeto integrador de um portal RH para a empresa * "
authors = ["hianny urt <hiannymaria@gmail.com>","Joana <@gmail.com>","Luan <@gmail.com>",
"Thalia <@gmail.com>","Pedro <@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
